--- a/package.json
+++ b/package.json
@@ -48,9 +48,13 @@
   },
   "dependencies": {
     "@types/expo": "^27.0.9",
+    "@types/react-navigation": "^2.0.21",
+    "@types/uuid": "^3.4.4",
     "expo": "^27.0.1",
     "native-base": "^2.8.0",
     "react": "16.3.1",
-    "react-native": "~0.55.2"
+    "react-native": "~0.55.2",
+    "react-navigation": "^2.16.0",
+    "uuid": "^3.3.2"
   }
 }
